--- a/home/green726/.dots/home/green726/.config/waybar/style.css
+++ b/home/green726/.dots/home/green726/.config/waybar/style.css
@@ -39,61 +39,115 @@
 
 
 
+@define-color bg rgba(4, 20, 45, 0.50);
+@define-color bg-alt #252428;
+@define-color fg #f5f5f5;
+@define-color alert #f53c3c;
+@define-color disabled #a5a5a5;
+@define-color oldbordercolor #29c8e5;
+@define-color bordercolor #777;
+@define-color highlight #FBD47F;
+@define-color activegreen #8fb666;
+
 * {
-    border: none;
-    border-radius: 0px;
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    min-height: 0;
+  min-height: 0;
+  font-family: "FiraCode Nerd Font";
+  font-size: 20px;
+  /* background-color: #04142d; */
 }
 
 window#waybar {
-    background-color: transparent;
-    color: #ffffff;
-    transition-property: background-color;
-    transition-duration: .5s;
+  color: #f5f5f5;
+  background: transparent;
+  transition-property: background-color;
+  transition-duration: 0.5s;
 }
 
-window#waybar.hidden {
-    opacity: 0.2;
+window#waybar.empty {
+  opacity: 0.3;
 }
 
+.modules-left {
+  background: @base;
+  border: 2px solid @mantle;
+  border-radius: 20px;
 
-#workspaces button {
-    background: #1f1f1f;
-    color: #ffffff;
-    border-radius: 20px;
+  padding-right: 5px;
+  padding-left: 5px;
+}
 
+.modules-right {
+  background: @base;
+  border: 2px solid @mantle;
+border-radius: 20px;
+
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+.modules-center {
+  background: @base;
+  border: 2px solid @mantle;
+border-radius: 20px;
+
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+button {
+  /* Use box-shadow instead of border so the text isn't offset */
+  box-shadow: inset 0 -3px transparent;
+  /* Avoid rounded borders under each button name */
+  border: none;
+  border-radius: 0;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-#workspaces button:hover {
-    background: lightblue;
-    color: black;
-    border-bottom: 3px solid #ffffff;
-
+button:hover {
+  background: inherit;
+  box-shadow: inset 0 -3px transparent;
 }
 
-#workspaces button.focused {
-    background: #1f1f1f;
-}
-
-#workspaces button.focused:hover {
-    background: lightblue;
-    color: black;
-    border-bottom: 3px solid #ffffff;
-
+#workspaces button {
+  /* background-color: #252428; */
+  color: @fg;
 }
 
 #workspaces button.urgent {
-    background-color: #eb4d4b;
+  color: @alert;
+  /* background-color: #252428; */
+  /* border: 3px solid #f53c3c; */
+}
+#workspaces button.empty {
+  color: @disabled;
+  /* background-color: #252428; */
 }
 
-#mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
+#workspaces button.active {
+  color: @activegreen;
+  /* background-color: #252428; */
+  /* border: 3px solid #7bcbd5; */
 }
+
+#workspaces button.focused {
+  background-color: @fg;
+  color: @bg-alt;
+}
+
+/* Uncomment If using icons instead of number for workspaces*/
+
+/* #workspaces, */
+/* #workspaces button,  */
+/* #workspaces button.active, */
+/* #workspaces button:hover,  */
+/* #workspaces button.focused, */
+/* #workspaces button.urgent { */
+/*     padding-right: 0px;  */
+/*     padding: 0px 6px;  */
+/*     padding-left: 3px; */
+/*     color: #F5F5F5; */
+/*     background-color: rgba(0, 0, 0, 0); */
+/* }  */
 
 #clock,
 #battery,
@@ -104,232 +158,119 @@ window#waybar.hidden {
 #backlight,
 #network,
 #pulseaudio,
+#pulseaudio.muted,
+#wireplumber,
 #custom-media,
-#custom-launcher,
-#custom-power,
-#custom-layout,
-#custom-updater,
-#custom-snip,
 #taskbar,
 #tray,
+#tray menu,
+#tray > .needs-attention,
+#tray > .passive,
+#tray > .active,
 #mode,
 #idle_inhibitor,
+#scratchpad,
+#custom-power,
 #mpd {
-    padding: 0 10px;
-    color: #ffffff;
+  padding: 0px 5px;
+  padding-right: 10px;
+  margin: 3px 3px;
+  color: @fg;
+  /* background-color: @base; */
 }
 
-#window,
-#workspaces {
-    margin: 0px 4px;
+#custom-power {
+  color: #5cc084;
+  padding-left: 10px;
+}
+#custom-separator {
+  color: @disabled;
+}
+
+#cpu {
+  color: #cb221b;
+}
+
+#temperature {
+  color: #d55c0d;
+}
+
+#memory {
+  color: #679c68;
+}
+
+#disk {
+  color: #979618;
+}
+
+#backlight {
+  color: #d69821;
+}
+
+#pulseaudio {
+  color: #448486;
+}
+
+#clock {
+  color: #b16186;
+}
+
+#battery {
+  color: #48aa4c;
+}
+
+#network {
+  color: #5cc084;
+}
+
+label:focus {
+  background-color: #000000;
+}
+
+#network.disconnected {
+  background-color: @alert;
+}
+
+#battery.charging,
+#battery.plugged {
+  color: #f5f5f5;
+  background-color: #26a65b;
+}
+
+#wireplumber.muted {
+  background-color: @alert;
+}
+
+#language {
+  background: @fg;
+  color: @bg-alt;
+  padding: 0 5px;
+  margin: 0 5px;
+  min-width: 16px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
-    margin-left: 0px;
+  margin-left: 0;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
 .modules-right > widget:last-child > #workspaces {
-    margin-right: 0px;
+  margin-right: 0;
 }
-
-#clock {
-    background-color: #171717;
-    color: #ffffff;
-}
-
-#battery {
-    background-color: #ffffff;
-    color: #000000;
-}
-
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
-}
-
 @keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
+  to {
+    background-color: @fg;
+    color: @bg-alt;
+  }
 }
 
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+  background-color: @alert;
+  color: @fg;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
-
-label:focus {
-    background-color: #000000;
-}
-
-#cpu {
-    background-color: #171717;
-    color: #ffffff;
-}
-
-#memory {
-    background-color: #171717;
-    color: #ffffff;
-}
-
-#disk {
-    background-color: #171717;
-    color: #ffffff;
-}
-
-#backlight {
-    background-color: #90b1b1;
-}
-
-#network {
-    background-color: #171717;
-    color: #ffffff;
-}
-
-#network.disconnected {
-    background-color: #171717;
-    color: red;
-}
-
-#pulseaudio {
-    background-color: #171717;
-    color: #ffffff;
-}
-
-#pulseaudio.muted {
-    background-color: #171717;
-    color: red;
-}
-
-#custom-media {
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    color: black;
-    border-radius: 20px;
-    margin-right: 5px;
-    margin-left: 5px;
-}
-
-#custom-media.custom-spotify {
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    color: black;
-    border-radius: 20px;
-    margin-right: 5px;
-
-}
-
-#custom-media.custom-vlc {
-    background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    color: black;
-    border-radius: 20px;
-    margin-right: 5px;
-}
-
-#custom-power{
-    background-color: #171717;
-    font-size: 18px;
-    border-radius: 0px 20px 20px 0px;
-    margin-right: 5px;
-
-}
-
-#custom-launcher{
-    background-color: #171717;
-    font-size: 20px;
-    border-radius: 20px 0px 0px 20px;
-    margin-left: 5px;
-
-}
-
-#custom-layout{
-    background-color: #171717;
-    color: white;
-    font-size:20px;
-}
-
-#custom-updater {
-    background-color: #171717;
-    color: white;
-}
-
-#custom-snip {
-    background-color: #171717;
-    color: skyblue;
-    font-size: 20px;
-}
-
-
-#taskbar{
-    background-color: #171717;
-    border-radius: 0px 20px 20px 0px;
-}
-
-#temperature {
-    background-color: #171717;
-    color: #ffffff;
-}
-
-#temperature.critical {
-    background-color: #eb4d4b;
-}
-
-#tray {
-    background-color: #171717;
-    color: #ffffff;
-}
-
-#tray > .passive {
-    -gtk-icon-effect: dim;
-    background-color: #171717;
-    color: #ffffff;
-}
-
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #171717;
-    color: #ffffff;
-}
-
-#idle_inhibitor {
-    background-color: #171717;
-    border-radius: 20px 0px 0px 20px;
-
-}
-
-#idle_inhibitor.activated {
-    background-color: #171717;
-    color: #ffffff;
-    border-radius: 20px 0px 0px 20px;
-
-}
-
-#language {
-    background-color: #171717;
-    color: #ffffff;
-    min-width: 16px;
-}
-
-#keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    min-width: 16px;
-}
-
-#keyboard-state > label {
-    padding: 0px 5px;
-}
-
-#keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
-}
-
